--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,21 +3,23 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
+  padding: 3rem;
   min-height: 100vh;
 }
 
 .description {
   display: inherit;
-  justify-content: inherit;
+  justify-content: center;
   align-items: inherit;
   font-size: 0.85rem;
   max-width: var(--max-width);
   width: 100%;
   z-index: 2;
+  color: #444447;
   font-family: var(--font-mono);
 }
 
+/*
 .description a {
   display: flex;
   justify-content: center;
@@ -129,16 +131,16 @@
   position: absolute;
   z-index: -1;
 }
-
-/* Conic Gradient Animation */
+*/
+/* Conic Gradient Animation
 .thirteen::before {
   animation: 6s rotate linear infinite;
   width: 200%;
   height: 200%;
   background: var(--tile-border);
 }
-
-/* Inner Square */
+*/
+/* Inner Square
 .thirteen::after {
   inset: 0;
   padding: 1px;
@@ -150,8 +152,8 @@
   );
   background-clip: content-box;
 }
-
-/* Enable hover only on non-touch devices */
+*/
+/* Enable hover only on non-touch devices
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
     background: rgba(var(--card-rgb), 0.1);
@@ -172,8 +174,8 @@
     transform: none;
   }
 }
-
-/* Mobile */
+*/
+/* Mobile
 @media (max-width: 700px) {
   .content {
     padding: 4rem;
@@ -249,8 +251,8 @@
     z-index: 1;
   }
 }
-
-/* Tablet and Smaller Desktop */
+*/
+/* Tablet and Smaller Desktop
 @media (min-width: 701px) and (max-width: 1120px) {
   .grid {
     grid-template-columns: repeat(2, 50%);
@@ -276,3 +278,4 @@
     transform: rotate(0deg);
   }
 }
+*/
