--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -7,9 +7,10 @@
 }
 
 .description {
-  display: inherit;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: inherit;
+  align-items: center;
   font-size: 0.85rem;
   max-width: var(--max-width);
   width: 100%;
@@ -87,10 +88,34 @@
   background-image: linear-gradient(to right, rgb(0, 80, 172), rgb(80, 19, 195));
 }
 
+.buttonform {
+  background-image: linear-gradient(to right, rgb(0, 92, 197), rgb(90, 20, 220));
+  width: 40%;
+  border: none;
+  margin: 0 0 15px;
+  padding: 5px;
+  color: white;
+  font-family: var(--font-mono);
+  font-size: 15px;
+  cursor: pointer;
+  border-radius: 10px; 
+}
+
+.buttonform:hover{
+  background-image: linear-gradient(to right, rgb(0, 80, 172), rgb(80, 19, 195));
+}
+
 .buttoncontainer{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.buttoncontainerform{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0 20px;
 }
 
 .productTable{  
@@ -117,5 +142,9 @@
 }
 
 .montantecomissao{
+  margin: 20px 0 10px;
+}
+
+.campo{
   margin: 20px 0 10px;
 }
