feat: ajuste code

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -16,7 +16,7 @@
   width: 100%;
   z-index: 2;
   color: #1a1a1a;
-  font-family: var(--font-mono);
+  font-family: var(Roboto Mono);
 }
 
 .graph {
@@ -61,7 +61,7 @@
 
 .mylabel{
   color: #020202;
-  padding: 0 5 0px;
+  margin: 0 5 0px;
 }
 
 .inputUser:focus ~ .labelInput,
@@ -73,7 +73,7 @@
 
 .mybutton {
   background-image: linear-gradient(to right, rgb(0, 92, 197), rgb(90, 20, 220));
-  width: 40%;
+  width: 30%;
   border: none;
   margin: 0 0 15px;
   padding: 5px;
@@ -95,8 +95,8 @@
   margin: 0 0 15px;
   padding: 5px;
   color: white;
-  font-family: var(--font-mono);
-  font-size: 15px;
+  font-family: var('Roboto Mono');
+  font-size: 13px;
   cursor: pointer;
   border-radius: 10px; 
 }
@@ -121,6 +121,8 @@
 .productTable{  
   border-collapse: collapse;
   border: 1px solid #1a1a1a;
+  font-family: var('Roboto Mono');
+  font-size: 16px;
   margin: 20px 0 20px;
   }
 
@@ -131,22 +133,23 @@
 
 .tier{
   margin: 10px 0 10px;
+  font-family: var('Roboto Mono');
+  font-size: 16px;
 }
 
 .metric{
   margin: 10px 0 10px;
-}
-
-.regracomissao{
-  margin: 20px 0 10px;
+  font-family: var('Roboto Mono');
+  font-size: 16px;
 }
 
 .montantecomissao{
   margin: 20px 0 10px;
+  font-family: var('Roboto Mono');
+  font-size: 16px;
 }
 
 .campo{
-  font-family: var(--font-mono);
   font-size: 16px;
   margin: 20px 0 10px;
   color: #1a1a1a;
