--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,6 +40,27 @@
   --card-border-rgb: 131, 134, 135;
 }
 
+a {
+  color: hsl(240, 8%, 95%);
+  text-decoration: none;
+  font-family: var(--font-mono);
+  font-weight: 900;
+}
+
+a:hover {
+  background-color: #2504bc;
+  color: white;
+  border: 2px solid rgb(0, 1, 31) ;
+  border-radius: 4px;
+  padding: 4px;
+}
+
+a:active {
+  background-color: #ffffff;
+  color:  #2504bc;
+}
+
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
