--- a/src/styles/Home.moduleNEW.css
+++ b/src/styles/Home.moduleNEW.css
@@ -28,15 +28,18 @@
 }
 
 .box{
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
+  width: 90%;
+  max-width: 400px;
+  height: auto;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
-  background-color: rgba(255, 255, 255, 0.6);
-  padding: 15px;
-  border-radius: 15px;
-  width: 40%;
-  background-color: #2C91D4;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  text-align: center;
+  background-color: #ffffff;
 }
 
 .centeredlegend {
@@ -46,9 +49,13 @@
 }
 
 .inputBox{
-  position: relative;
-  text-align: center;
-  font-family: var(--font-mono);
+  width: 100%;
+  max-width: 300px;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
 }
 
 .inputUser{
@@ -60,10 +67,7 @@
   letter-spacing: 1px;
 }
 
-.mylabel{
-  color: #020202;
-  margin: 0 5 0px;
-}
+
 
 .inputUser:focus ~ .labelInput,
 .inputUser:valid ~ .labelInput{
@@ -73,24 +77,22 @@
 }
 
 .mybutton {
-  background-image: linear-gradient(to right, #b8795e, #b35932);
-  width: 30%;
-  border: none;
-  margin: 0 0 15px;
-  padding: 5px;
+  background-color: #00a6ff;
   color: white;
-  font-family: var(--font-mono);
-  font-size: 15px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
-  border-radius: 10px; 
+  width: 100%;
+  max-width: 300px; 
 }
 
 .mybutton:hover{
-  background-image: linear-gradient(to right, #61a6d4, #2C91D4);
+  background-image: linear-gradient(to right, rgb(0, 80, 172), rgb(80, 19, 195));
 }
 
 .buttonform {
-  background-image: linear-gradient(to right, rgb(0, 92, 197), #2C91D4);
+  background-image: linear-gradient(to right, rgb(0, 92, 197), rgb(90, 20, 220));
   width: 40%;
   border: none;
   margin: 0 0 15px;
@@ -103,7 +105,7 @@
 }
 
 .buttonform:hover{
-  background-image: linear-gradient(to right, #61a6d4, #2C91D4);
+  background-image: linear-gradient(to right, rgb(0, 80, 172), rgb(80, 19, 195));
 }
 
 .buttoncontainer{
@@ -121,11 +123,10 @@
 
 .productTable{  
   border-collapse: collapse;
-  border: 2px solid #1a1a1a;
+  border: 1px solid #1a1a1a;
   font-family: var('Roboto Mono');
   font-size: 16px;
   margin: 20px 0 20px;
-  background-color: #f8e8e0;
   }
 
 .cellsTable{
@@ -137,11 +138,6 @@
   margin: 10px 0 10px;
   font-family: var('Roboto Mono');
   font-size: 16px;
-}
-
-.input-bg {
-  background-color: #f8e8e0;
-  border: 1px solid #1a1a1a;
 }
 
 .metric{
@@ -166,5 +162,5 @@
   font-size: 16px;
   margin: 15px 0 10px;
   color: #1a1a1a;
-  border: 1px solid #2C91D4;
+  border: 1px solid #4525d1;
 }
