--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,17 +1,9 @@
 .main {
   display: flex;
-  background-image: url(https://img.freepik.com/fotos-gratis/fundo-desfocado-escuro-abstrato-cor-de-textura-de-gradiente-suave-padrao-de-site-brilhante-brilhante-cabecalho-de-banner-ou-imagem-de-arte-grafica-de-barra-lateral_1258-85524.jpg?w=1060&t=st=1683078915~exp=1683079515~hmac=bd057a24e11d465fe5f1c7568c60b1302ab572aafa7b1a232195cddb5039763d);
-  background-size: cover;
   flex-direction: column;
   align-items: center;
   padding: 3rem;
   min-height: 100vh;
-}
-
-.title {
-  color: rgb(206, 228, 255);  
-  margin: 10px;
-  font-size: 25px;
 }
 
 .description {
@@ -20,21 +12,11 @@
   justify-content: center;
   align-items: center;
   font-size: 0.85rem;
-  padding: 0.5px;
   max-width: var(--max-width);
   width: 100%;
   z-index: 2;
-  color: #ffffff;
+  color: #1a1a1a;
   font-family: var(Roboto Mono);
-    margin: 10px;
-}
-
-.form {
-  border: solid 1px rgba(0, 21, 80, 0.178);
-  border-radius: 7px;
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.416);
-  padding: 8px;
-
 }
 
 .graph {
@@ -43,12 +25,7 @@
   align-Items: center;
   justify-Content: center;
   padding: 3rem;
-  background-color: #001a3d;
-  border: solid 1px ;
-  border-radius: 5px;
-  box-shadow: 1 px 0px 1px 0px;
 }
-
 
 .box{
   position: absolute;
@@ -71,13 +48,6 @@
   position: relative;
   text-align: center;
   font-family: var(--font-mono);
-  width: 100%;
-  max-width: 300px;
-  margin-bottom: 10px;
-  padding: 10px;
-  border-radius: 5px;
-  border: none;
-  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
 }
 
 .inputUser{
@@ -158,22 +128,10 @@
 
 .cellsTable{
   padding: 3px;
-  background-color: rgb(0, 10, 145);
-  color: aliceblue;
-  border-collapse: collapse;
-  border-bottom: 1px solid rgb(0, 5, 94);
+  border: 1px solid #1a1a1a;
 }  
 
 .tier{
-   display: flex;
-  flex-direction: column;
-  color: rgb(255, 255, 255);
-  margin-top: 20px;
-  background-color: rgb(0, 10, 145);
-  border: 2px solid rgb(0, 5, 94) ;
-  padding: 8px;
-  border-radius: 16px;
-  font-size: 14px;
   margin: 10px 0 10px;
   font-family: var('Roboto Mono');
   font-size: 16px;
@@ -195,17 +153,6 @@
   font-size: 16px;
   margin: 20px 0 10px;
   color: #1a1a1a;
-    font-size: 16px;
-  margin: 20px 0 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: rgb(45, 45, 200);
-  background-color: rgb(255, 255, 255);
-  gap: 1rem;
-  padding: 0.7rem;
-  border-radius: 12px;
-  border: 2px solid rgb(0, 55, 255) ;
 }
 
 .gestorCartDrop{
@@ -213,17 +160,4 @@
   margin: 15px 0 10px;
   color: #1a1a1a;
   border: 1px solid #4525d1;
-}
-
-
-.metrics {
-  display: flex;
-  flex-direction: column;
-  color: rgb(255, 255, 255);
-  margin-top: 20px;
-  border: 2px solid rgb(0, 1, 31) ;
-  background-color: rgb(0, 10, 145);
-  border-radius: 20px;
-  padding: 15px;
-  font-size: 14px;
 }
